# SoftwareRenderer

./: CMakeLists.txt  README.md  SoftwareRenderer.cpp  SoftwareRenderer.h
src/: Common.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Macros.h  Main.cpp  Main.h  Math.h  Utils.h
